--- a/deploy/secret.yaml
+++ b/deploy/secret.yaml
@@ -6,4 +6,5 @@ metadata:
 type: Opaque
 data:
   username: <BASE64 username>
-  password: <BASE64 password> 
+  password: <BASE64 password>
+  registry: kofoworola
